tests/parser-test-files/bad-files/define.3.error
error: Duplicate monomorphize attribute
  --> test:5:0
   |
 4 |  (monomorphize)
   |  -------------- previous attribute here
 5 |  (monomorphize)
   |  ^^^^^^^^^^^^^^ monomorphize attribute here
 6 |  (define f x)
   |          - when parsing define
