tests/parser-test-files/bad-files/define.3.coal
;; BAD: Parse Define
(package test-package)

(monomorphize)
(monomorphize)
(define f x)
